force-app/main/default/objects/Account/fields/Abdellilah__c.field-meta.xml
<CustomField>
    <fullName>Abdellilah__c</fullName>
    <label>Abdellilah</label>
    <length>25</length>
    <type>Text</type>
</CustomField>