force-app/main/default/objects/Account/fields/Achbar_Saad__c.field-meta.xml
<CustomField>
    <fullName>Achbar_Saad__c</fullName>
    <label>Achbar_Saad</label>
    <length>23</length>
    <type>Text</type>
</CustomField>