force-app/main/default/objects/Account/fields/Asmaelb__c.field-meta.xml
<CustomField>
    <fullName>Asmaelb__c</fullName>
    <label>Asmaelb</label>
    <length>16</length>
    <type>Text</type>
</CustomField>