force-app/main/default/objects/Account/fields/Haiouel_aymane__c.field-meta.xml
<CustomField>
    <fullName>Haiouel_aymane__c</fullName>
    <label>HaiouelAymane</label>
    <length>16</length>
    <type>Text</type>
</CustomField>