force-app/main/default/objects/Account/fields/haytham__c.field-meta.xml
<CustomField>
    <fullName>haytham__c</fullName>
    <description>haytham&apos;s custom field</description>
    <label>haytham</label>
    <length>16</length>
    <type>Text</type>
</CustomField>