force-app/main/default/objects/Account/fields/Imane__c.field-meta.xml
<CustomField>
    <fullName>Imane__c</fullName>
    <description>test VCS</description>
    <label>Imane</label>
    <length>16</length>
    <type>Text</type>
</CustomField>