force-app/main/default/objects/Account/fields/MeryemYahya__c.field-meta.xml
<CustomField>
    <fullName>MeryemYahya__c</fullName>
    <label>MeryemYahya</label>
    <length>120</length>
    <type>Text</type>
</CustomField>