force-app/main/default/objects/Account/fields/YassineGouma__c.field-meta.xml
<CustomField>
    <fullName>YassineGouma__c</fullName>
    <label>YassineGouma</label>
    <length>30</length>
    <type>Text</type>
</CustomField>